# VideoUpscaler

./: .env.example  .gitignore  README.md  cleanup.py  download_models.py  install.py  main_menu.py  pyproject.toml  run_web.py  setup_gpu.py  test_video.py  video_upscaler.py
app/: __init__.py  cleanup.py  database.py  gpu_detector.py  models.py  task_queue.py  video_processor.py
app/static/js/: main.js
app/templates/: base.html  index.html  index_backup.html
docs/: 3GP_UPSCALING_GUIDE.md
