[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[project]
name = "video-upscaler"
version = "0.1.0"
description = "A video upscaling tool using Real-ESRGAN with web interface and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HoneyNutz"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Multimedia :: Video",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
]
dependencies = [
    # PyTorch - pinned versions for compatibility
    "torch==2.0.1",
    "torchvision==0.15.2",
    # Core dependencies - NumPy constraint to prevent 2.x compatibility issues
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    # AI packages with specific versions for NumPy 1.x compatibility
    "basicsr==1.4.2",
    "realesrgan==0.3.0",
    "facexlib==0.3.0", 
    "gfpgan==1.3.8",
    # Other dependencies
    "ffmpeg-python>=0.2.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
web = [
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "python-engineio>=4.0.0",
    "eventlet>=0.33.0",
]

dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0",
    "isort>=5.0.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
    "pytest-flask>=1.2.0",
]

[project.scripts]
video-upscaler = "video_upscaler:main"
video-upscaler-web = "run_web:main"

[project.urls]
"Homepage" = "https://github.com/HoneyNutz/video-upscaler"
"Bug Tracker" = "https://github.com/HoneyNutz/video-upscaler/issues"
"Documentation" = "https://github.com/HoneyNutz/video-upscaler#readme"
